crates/inertia-embed/tests/ui/fail/non_literal.stderr
error: expected string literal
 --> tests/ui/fail/non_literal.rs:7:15
  |
7 |         root: ROOT,
  |               ^^^^
